--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -10172,6 +10172,23 @@
    "source": [
     "save_mfcc(DATASET_PATH, JSON_PATH, num_segments=10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import json\n",
+    "\n",
+    "# Load JSON data\n",
+    "with open(\"data_10.json\", \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Save as .npz\n",
+    "np.savez_compressed(\"data_10.npz\", **data)"
+   ]
   }
  ],
  "metadata": {
