--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -2,64 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\marti.MARTIN\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/andradaolteanu/gtzan-dataset-music-genre-classification?dataset_version_number=1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1.21G/1.21G [03:48<00:00, 5.70MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: C:\\Users\\marti.MARTIN\\.cache\\kagglehub\\datasets\\andradaolteanu\\gtzan-dataset-music-genre-classification\\versions\\1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Download the GTZAN dataset\n",
-    "import kagglehub\n",
-    "\n",
-    "path = kagglehub.dataset_download(\"andradaolteanu/gtzan-dataset-music-genre-classification\")\n",
-    "\n",
-    "print(\"Path to dataset files:\", path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -72,11 +14,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset path that was downloaded in EDA.ipynb\n",
+    "DATASET_PATH = r\"C:\\Users\\marti.MARTIN\\.cache\\kagglehub\\datasets\\andradaolteanu\\gtzan-dataset-music-genre-classification\\versions\\1\\Data\\genres_original\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PATH = r\"C:\\Users\\marti.MARTIN\\.cache\\kagglehub\\datasets\\andradaolteanu\\gtzan-dataset-music-genre-classification\\versions\\1\\Data\\genres_original\"\n",
     "JSON_PATH = \"data_10.json\"\n",
     "SAMPLE_RATE = 22050\n",
     "TRACK_DURATION = 30 # measured in seconds\n",
@@ -10171,6 +10122,13 @@
    ],
    "source": [
     "save_mfcc(DATASET_PATH, JSON_PATH, num_segments=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that the JSON file is not ideal (way too much heavy in volume). And the numpy format (.npz) is much more efficient for this purpose:"
    ]
   },
   {
