--- a/notebooks/model_NN_classification.ipynb
+++ b/notebooks/model_NN_classification.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# path to numpy .npz file that stores MFCCs and genre labels for each processed segment\n",
-    "DATA_PATH = \"data_10.npz\""
+    "DATA_PATH = \"../classifier/data_10.npz\""
    ]
   },
   {
