--- a/monitoring/data_testing.ipynb
+++ b/monitoring/data_testing.ipynb
@@ -361,7 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_90889/4249371925.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_99856/4249371925.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda g: (g[\"actual_genre\"] == g[\"predicted_genre\"]).mean())\n"
      ]
     }
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x73ddbc3515e0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7c272f9b1e80>"
       ]
      },
      "execution_count": 5,
@@ -531,7 +531,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
+   "id": "2a6134ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_df = pd.read_parquet(\"data/reference.parquet\")\n",
+    "current_df = pd.read_parquet(\"data/current.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f60d23af",
    "metadata": {},
    "outputs": [],
@@ -545,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "28721094",
    "metadata": {},
    "outputs": [],
@@ -555,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f778ec23",
    "metadata": {},
    "outputs": [],
@@ -589,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "e26ef581",
    "metadata": {},
    "outputs": [],
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "65a782d4",
    "metadata": {},
    "outputs": [],
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "3cb7a3d2",
    "metadata": {},
    "outputs": [],
@@ -652,51 +663,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "e7206371",
    "metadata": {},
    "outputs": [],
    "source": [
     "metrics_output=[]\n",
     "\n",
+    "metrics_output.append(\"# HELP evidently_metric Evidently monitoring metric\")\n",
+    "metrics_output.append(\"# TYPE evidently_metric gauge\")\n",
+    "\n",
     "for metric in results[\"metrics\"]:\n",
-    "    metric_id = metric.get(\"metric_id\")\n",
+    "    metric_id = metric.get(\"metric_id\").lower().replace(\"()\", \"\").replace(\" \", \"_\")\n",
     "    value = metric.get(\"value\")\n",
     "\n",
-    "    # Handle simple numeric values\n",
+    "    # Handle numeric values\n",
     "    if isinstance(value, (int, float)):\n",
-    "        metric_name = metric_id.lower().replace(\"()\", \"\")\n",
-    "        metrics_output.append(f\"{metric_name} {value:.6f}\")\n",
+    "        metrics_output.append(f\"{metric_id} {value:.6f}\")\n",
     "\n",
-    "    # Handle dict values (e.g., missing values)\n",
+    "    # Handle dict values (like drift counts)\n",
     "    elif isinstance(value, dict):\n",
     "        for sub_key, sub_val in value.items():\n",
-    "            sub_metric_name = f\"{metric_id.lower().replace('()', '').replace(',', '_').replace(' ', '_')}_{sub_key}\"\n",
     "            if isinstance(sub_val, (int, float)):\n",
-    "                metrics_output.append(f\"{sub_metric_name} {sub_val:.6f}\")\n",
+    "                sub_name = f\"{metric_id}_{sub_key}\".replace(\" \", \"_\").replace(\",\", \"_\")\n",
+    "                metrics_output.append(f\"{sub_name} {sub_val:.6f}\")\n",
     "\n",
-    "    # Handle np.float values (as strings if needed)\n",
+    "    # Handle numpy floats\n",
     "    else:\n",
     "        try:\n",
-    "            float_val = float(value)\n",
-    "            metric_name = metric_id.lower().replace(\"()\", \"\")\n",
-    "            metrics_output.append(f\"{metric_name} {float_val:.6f}\")\n",
-    "        except Exception:\n",
-    "            metrics_output.append(f\"# could not parse metric: {metric_id}\")\n",
-    "\n",
-    "metrics_output.insert(0, \"# Evidently Monitoring Metrics\")\n"
+    "            metrics_output.append(f\"{metric_id} {float(value):.6f}\")\n",
+    "        except:\n",
+    "            pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "fe34debb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['# Evidently Monitoring Metrics',\n",
+       "['# HELP evidently_metric Evidently monitoring metric',\n",
+       " '# TYPE evidently_metric gauge',\n",
        " 'rowcount 200.000000',\n",
        " 'emptyrowscount 0.000000',\n",
        " 'duplicatedrowcount 0.000000',\n",
@@ -748,7 +758,7 @@
        " 'f1score(conf_matrix=true) 0.864359']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
