prometheus alert rules

--- a/monitoring/data_testing.ipynb
+++ b/monitoring/data_testing.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "2a6134ae",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f60d23af",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "28721094",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "f778ec23",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "bd2ff20d",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
        "DataDefinition(id_column=None, timestamp=None, service_columns=None, numerical_columns=['mfcc_1', 'mfcc_2', 'mfcc_3', 'mfcc_4', 'mfcc_5', 'mfcc_6', 'mfcc_7', 'mfcc_8', 'mfcc_9', 'mfcc_10', 'mfcc_11', 'mfcc_12', 'mfcc_13'], categorical_columns=None, text_columns=None, datetime_columns=None, classification=[MulticlassClassification(name='default', target='actual_genre', prediction_labels='predicted_genre', prediction_probas=None, labels=None)], regression=None, llm=None, numerical_descriptors=[], categorical_descriptors=[], test_descriptors=None, ranking=None)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "e26ef581",
    "metadata": {},
    "outputs": [],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "65a782d4",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "3cb7a3d2",
    "metadata": {},
    "outputs": [],
@@ -663,42 +663,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e7206371",
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_output=[]\n",
-    "\n",
-    "metrics_output.append(\"# HELP evidently_metric Evidently monitoring metric\")\n",
-    "metrics_output.append(\"# TYPE evidently_metric gauge\")\n",
-    "\n",
-    "for metric in results[\"metrics\"]:\n",
-    "    metric_id = metric.get(\"metric_id\").lower().replace(\"()\", \"\").replace(\" \", \"_\")\n",
-    "    value = metric.get(\"value\")\n",
-    "\n",
-    "    # Handle numeric values\n",
-    "    if isinstance(value, (int, float)):\n",
-    "        metrics_output.append(f\"{metric_id} {value:.6f}\")\n",
-    "\n",
-    "    # Handle dict values (like drift counts)\n",
-    "    elif isinstance(value, dict):\n",
-    "        for sub_key, sub_val in value.items():\n",
-    "            if isinstance(sub_val, (int, float)):\n",
-    "                sub_name = f\"{metric_id}_{sub_key}\".replace(\" \", \"_\").replace(\",\", \"_\")\n",
-    "                metrics_output.append(f\"{sub_name} {sub_val:.6f}\")\n",
-    "\n",
-    "    # Handle numpy floats\n",
-    "    else:\n",
-    "        try:\n",
-    "            metrics_output.append(f\"{metric_id} {float(value):.6f}\")\n",
-    "        except:\n",
-    "            pass\n"
+    "import re\n",
+    "def prometheus_safe(name: str) -> str:\n",
+    "    name = re.sub(r\"[^a-zA-Z0-9_:]\", \"_\", name)\n",
+    "    name = re.sub(r\"__+\", \"_\", name)\n",
+    "    name = name.strip(\"_\")\n",
+    "    return name.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "id": "9ea05d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_lines = []\n",
+    "output_lines.append(\"# HELP evidently_metric Evidently monitoring metric\")\n",
+    "output_lines.append(\"# TYPE evidently_metric gauge\")\n",
+    "\n",
+    "for metric in results[\"metrics\"]:\n",
+    "    raw_name = metric.get(\"metric_id\", \"unknown_metric\")\n",
+    "    metric_id = prometheus_safe(raw_name)\n",
+    "\n",
+    "    value = metric.get(\"value\")\n",
+    "\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        output_lines.append(f\"{metric_id} {value:.6f}\")\n",
+    "\n",
+    "    elif isinstance(value, dict):\n",
+    "        for sub_key, sub_val in value.items():\n",
+    "            if isinstance(sub_val, (int, float)):\n",
+    "                sub_name = prometheus_safe(f\"{metric_id}_{sub_key}\")\n",
+    "                output_lines.append(f\"{sub_name} {sub_val:.6f}\")\n",
+    "\n",
+    "    else:\n",
+    "        try:\n",
+    "            numeric_val = float(value)\n",
+    "            output_lines.append(f\"{metric_id} {numeric_val:.6f}\")\n",
+    "        except (TypeError, ValueError):\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "fe34debb",
    "metadata": {},
    "outputs": [
@@ -707,64 +721,64 @@
       "text/plain": [
        "['# HELP evidently_metric Evidently monitoring metric',\n",
        " '# TYPE evidently_metric gauge',\n",
-       " 'rowcount 200.000000',\n",
+       " 'rowcount 206.000000',\n",
        " 'emptyrowscount 0.000000',\n",
-       " 'duplicatedrowcount 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_1)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_1)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_2)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_2)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_3)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_3)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_4)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_4)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_5)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_5)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_6)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_6)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_7)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_7)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_8)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_8)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_9)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_9)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_10)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_10)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_11)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_11)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_12)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_12)_share 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_13)_count 0.000000',\n",
-       " 'missingvaluecount(column=mfcc_13)_share 0.000000',\n",
-       " 'valuedrift(column=mfcc_1) 0.758741',\n",
-       " 'valuedrift(column=mfcc_2) 0.585172',\n",
-       " 'valuedrift(column=mfcc_3) 0.357478',\n",
-       " 'valuedrift(column=mfcc_4) 0.885951',\n",
-       " 'valuedrift(column=mfcc_5) 0.414340',\n",
-       " 'valuedrift(column=mfcc_6) 0.492633',\n",
-       " 'valuedrift(column=mfcc_7) 0.899572',\n",
-       " 'valuedrift(column=mfcc_8) 0.740495',\n",
-       " 'valuedrift(column=mfcc_9) 0.984003',\n",
-       " 'valuedrift(column=mfcc_10) 0.631787',\n",
-       " 'valuedrift(column=mfcc_11) 0.191371',\n",
-       " 'valuedrift(column=mfcc_12) 0.473369',\n",
-       " 'valuedrift(column=mfcc_13) 0.258430',\n",
-       " 'driftedcolumnscount(columns=mfcc_1_mfcc_2_mfcc_3_mfcc_4_mfcc_5_mfcc_6_mfcc_7_mfcc_8_mfcc_9_mfcc_10_mfcc_11_mfcc_12_mfcc_13_drift_share=0.5)_count 0.000000',\n",
-       " 'driftedcolumnscount(columns=mfcc_1_mfcc_2_mfcc_3_mfcc_4_mfcc_5_mfcc_6_mfcc_7_mfcc_8_mfcc_9_mfcc_10_mfcc_11_mfcc_12_mfcc_13_drift_share=0.5)_share 0.000000',\n",
-       " 'valuedrift(column=predicted_genre) 0.999405',\n",
-       " 'categorycount(column=predicted_genre_categories=blues_classical_country_disco_hiphop_jazz_metal_pop_reggae_rock)_count 200.000000',\n",
-       " 'categorycount(column=predicted_genre_categories=blues_classical_country_disco_hiphop_jazz_metal_pop_reggae_rock)_share 1.000000',\n",
-       " 'accuracy 0.865000',\n",
-       " 'f1score(conf_matrix=true) 0.864359']"
+       " 'duplicatedrowcount 5.000000',\n",
+       " 'missingvaluecount_column_mfcc_1_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_1_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_2_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_2_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_3_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_3_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_4_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_4_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_5_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_5_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_6_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_6_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_7_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_7_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_8_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_8_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_9_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_9_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_10_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_10_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_11_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_11_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_12_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_12_share 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_13_count 0.000000',\n",
+       " 'missingvaluecount_column_mfcc_13_share 0.000000',\n",
+       " 'valuedrift_column_mfcc_1 0.905056',\n",
+       " 'valuedrift_column_mfcc_2 0.637000',\n",
+       " 'valuedrift_column_mfcc_3 0.244905',\n",
+       " 'valuedrift_column_mfcc_4 0.995978',\n",
+       " 'valuedrift_column_mfcc_5 0.221061',\n",
+       " 'valuedrift_column_mfcc_6 0.339765',\n",
+       " 'valuedrift_column_mfcc_7 0.853171',\n",
+       " 'valuedrift_column_mfcc_8 0.650246',\n",
+       " 'valuedrift_column_mfcc_9 0.597266',\n",
+       " 'valuedrift_column_mfcc_10 0.542527',\n",
+       " 'valuedrift_column_mfcc_11 0.132736',\n",
+       " 'valuedrift_column_mfcc_12 0.652210',\n",
+       " 'valuedrift_column_mfcc_13 0.321978',\n",
+       " 'driftedcolumnscount_columns_mfcc_1_mfcc_2_mfcc_3_mfcc_4_mfcc_5_mfcc_6_mfcc_7_mfcc_8_mfcc_9_mfcc_10_mfcc_11_mfcc_12_mfcc_13_drift_share_0_5_count 0.000000',\n",
+       " 'driftedcolumnscount_columns_mfcc_1_mfcc_2_mfcc_3_mfcc_4_mfcc_5_mfcc_6_mfcc_7_mfcc_8_mfcc_9_mfcc_10_mfcc_11_mfcc_12_mfcc_13_drift_share_0_5_share 0.000000',\n",
+       " 'valuedrift_column_predicted_genre 0.982437',\n",
+       " 'categorycount_column_predicted_genre_categories_blues_classical_country_disco_hiphop_jazz_metal_pop_reggae_rock_count 206.000000',\n",
+       " 'categorycount_column_predicted_genre_categories_blues_classical_country_disco_hiphop_jazz_metal_pop_reggae_rock_share 1.000000',\n",
+       " 'accuracy 0.868932',\n",
+       " 'f1score_conf_matrix_true 0.864963']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics_output"
+    "output_lines"
    ]
   }
  ],
